force-app/main/default/objects/WorkPlanTemplateEntry/fields/CoIT_WorkType_Required__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WorkType_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type Required</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Plan Template Entries</relationshipLabel>
    <relationshipName>Work_Plan_Template_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>