force-app/main/default/objects/WorkPlanTemplateEntry/fields/CoIT_WSTemplate_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WSTemplate_ID_Name__c</fullName>
    <formula>WorkStepTemplate.Id +&quot;:&quot;+ WorkStepTemplate.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoIT WSTemplate ID Name</label>
    <type>Text</type>
</CustomField>