force-app/main/default/objects/WorkPlanTemplateEntry/fields/CoIT_WSTemplate_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WSTemplate_Name__c</fullName>
    <formula>WorkStepTemplate.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoIT_WSTemplate_Name</label>
    <type>Text</type>
</CustomField>